ontol/ontol-compiler/test-cases/error/repr/abstract2.on
def foo (rel .is: number) // NOTE Type is abstract
def bar (rel .0: foo) // ERROR type not representable// NOTE Type of field is abstract
